[metadata]
name = ph121c-lxvm
version = 1.0
author = Lorenzo X. Van Muñoz
author_email = lorenzo@vanmunoz.com
description = Package for Ph 121c project
url = https://github.com/lxvm/ph121c

[options]
python_requires = >= 3.7.9
packages = find:
install_requires = 
  numpy >= 1.20
  scipy >= 1.6
  h5py  >= 2.10
